# PyKingGen

./: README.md  pyproject.toml  setup.cfg
examples/: alt.py  profile.py  sync_alt.py  sync_profile.py
src/pyking/: __init__.py
src/pykinggen/: __init__.py  client.py  errors.py  sync.py
src/pykinggen/types/: __init__.py  alt.py  profile.py
