[metadata]
name = PyKingGen
version = 0.0.5
author = Masturbino1337
description = Simple asyncio API wrapper for KingGen
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Masturbino1337/PyKingGen

[options]
install_requires =
    httpx
python_requires = >=3.6
package_dir = =src
